# password-manager

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md
.github/workflows/: cmake-ci.yml  cmake_ci.yml  pre-commit.yml
encrypt/: CMakeLists.txt  README.md
encrypt/hash/: FakeHash.cpp  FakeHash.hpp  IHash.hpp  SHA512.cpp  SHA512.hpp
encrypt/symCrypt/: AES256CBC.cpp  AES256CBC.hpp  FakeSymCipher.cpp  FakeSymCipher.hpp  ISymCipher.hpp
encrypt/uTests/: CMakeLists.txt
encrypt/uTests/symCrypt/: AES256CBCTests.cpp  SHA512Tests.cpp
headers/: PasswordManager.h
source/: CMakeLists.txt  PasswordManager.cpp  main.cpp
source/Backend/: CMakeLists.txt  PasswordChecker.cpp  PasswordChecker.hpp  main.cpp
source/Backend/Common/: Logger.cpp
source/Backend/DataBase/: CMakeLists.txt  DataBaseConnection.cpp  DataBaseConnection.hpp  DataBaseHandler.cpp  DataBaseManager.cpp  DataBaseManager.hpp  QueryOperationBuilder.cpp  QueryOperationBuilder.hpp  password-manager.db
source/Backend/DataBase/common/: DataBaseCommon.hpp  DataBaseRequest.hpp
source/Backend/DataBase/interface/: IDataBaseConnection.hpp  IDataBaseManager.hpp  IQueryOperationBuilder.hpp
source/Common/: Logger.cpp  Logger.hpp
source/DataBase/: CMakeLists.txt  DataBaseCommon.cpp  DataBaseCommon.hpp  DataBaseHandler.cpp  DataBaseHandler.hpp  password-manager.db
source/DataBase/common/: DataBaseCommon.hpp
source/Frontend/: CMakeLists.txt
source/Frontend/src/app/: CMakeLists.txt  main.cpp  mainwindow.ui
source/Registration/: CMakeLists.txt  RegistrationHandler.cpp  RegistrationHandler.hpp  User.cpp  User.hpp
source/Test/: CMakeLists.txt  DataBaseManagerTests.cpp  QueryOperationBuilderTests.cpp
source/Test/mocks/: DataBaseConnectionMock.hpp  DataBaseManagerMock.hpp  QueryOperationBuilderMock.hpp
source/test/: CMakeLists.txt  test.cpp
src/: CMakeLists.txt
